# demo_sole

./: .gitignore  hello.py  layouts.py  mock.py  pbs.py  pyproject.toml
data/nodes/destNode/: navigation.txt
data/nodes/sourceNode/: navigation.txt
src/legends/R/: calibration.txt  item.txt  legend.txt
src/sole24oredemo/: constants.py  create_dataset.py  graphics.py  hello.py  layouts.py  metrics.py  mock.py  parallel_code.py  pbs.py  scripts.py  utils.py
src/sole24oredemo/cfg/: cfg.yaml
src/sole24oredemo/inference_scripts/: run_ED_ConvLSTM_inference.py
src/sole24oredemo/pbs_scripts/: run_ED_ConvLSTM_inference.sh  run_pystep_inference.sh
src/sole24oredemo/sou_py/: configuration_manager.py  data_utils.py  operative_chain.py  paths.py  sites_utils.py
src/sole24oredemo/sou_py/dpb/: __init__.py  dpb.py  dpb_distribute.py  dpb_export.py  dpb_hdf.py  export_prod.py
src/sole24oredemo/sou_py/dpg/: __init__.py  access.py  alerts.py  array.py  attr.py  attr__define.py  base.py  beams.py  calibration.py  cfg.py  container__define.py  coords.py  dpg.py  geoRadar.py  globalVar.py  grid.py  io.py  legend.py  log.py  map.py  map__define.py  navigation.py  node__define.py  path.py  phase_2.py  prcs.py  radar.py  rpk.py  schedule__define.py  scheduler__define.py  times.py  tree.py  utility.py  utilityArray.py  values.py  warp.py
src/sole24oredemo/sou_py/dpv/: __init__.py  datamet_getters.py  product_plotter.py
src/sole24oredemo/sou_py/graphs/: call_graph.drawio  classes.drawio  files.drawio
src/sole24oredemo/sou_py/preprocessing/: __init__.py  attenuation.py  kdp.py  (+8 more)
(+31 files in other folders)
